# gooey_redesign

./: .gitignore  Bart_README.md  LICENSE  QuickQDemo.shw  README.md  TAILWIND_DAISYUI_MIGRATION_PLAN.md  interface_guide.md  nixpacks.toml  package-lock.json  package.json  platformio.ini  push.sh  pyproject.toml  railway.toml  render.yaml  requirements.txt  run.py
.claude/: launch.json
.claude/skills/: skill-rules.json
.github/: copilot-instructions.md
.github/instructions/: firmware.instructions.md  gooey.instructions.md
.github/workflows/: build-desktop.yml  build-docs.yml  update-formula.yml
Bart/: CMakeLists.txt  platformio.ini
Bart/docs/: technical_guide.md  user_guide.md
Bart/old_files/: OscMailRoute.h  bart_baro.h  bart_imu.h
Bart/src/: OSC.h  OscClass.h  OscDest.h  OscMailman.h  OscRoute.h  (+15 more)
Formula/: gooey.rb
ab7/: platformio.ini
app/: main.py  osc_handler.py  script_runner.py
aur/: PKGBUILD
bc127/: bc127.shw  bc127_patch.html  osc_dmx.py  platformio.ini  requirements.txt  shw_patch.py
docs/: beryl_guide.md  build_docs.py  engineering.md  gooey_guide.md  osc_guide.md  technical_guide.md  tutorial.md  user_guide.md
gooey/: .gitignore  Dockerfile  Dockerfile.demo  GooeyServer.spec  README.md  app_desktop.py  install.sh  package-lock.json  package.json  pyproject.toml  requirements.txt  run.py  run_server.py
gooey/app/: main.py  osc_handler.py  script_runner.py
gooey/app/static/: icon-picker.html  manifest.json  panel-mockup.html
gooey/app/static/css/: style.css
gooey/app/static/js/: app.js  remote.js
gooey/app/templates/: docs.html  index.html  remote.html
gooey/data/scripts/: j.py
gooey/docs/: homebrew.md  installation.md  quickstart.md  troubleshooting.md
gooey/scripts/: build_sidecar.sh
gooey/src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
gooey/src-tauri/capabilities/: default.json
gooey/src-tauri/icons/: icon.icns
gooey/src-tauri/src/: lib.rs  main.rs
gooey/ui/: loading.html
old_files/: OscDest.h  bart_def.h
remote/: platformio.ini
snap/: snapcraft.yaml
src/: ab7_hardware.cpp  ab7_hardware.h  bart_hardware.cpp  bart_hardware.h  data_streams.h  euler_utils.h  main.cpp  main.h  network_setup.h  ori_tracker.h  osc_commands.h  osc_engine.h  osc_message.h  osc_pattern.h  osc_registry.h  osc_scene.h  osc_status.h  osc_storage.h  serial_commands.h  string_pool.h
(+84 files in other folders)
