[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gooey-redesign"
version = "1.2.22"
description = "gooey UI design sandbox — stripped from TheaterGWD, simulated OSC backend"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = [
    "flask>=3.0",
    "flask-socketio>=5.3",
    "markdown>=3.7",
    "pyserial>=3.5",
    "qrcode>=7.4",
]

[project.urls]
Repository = "https://github.com/halfsohappy/gooey_redesign"

[project.scripts]
gooey = "run:main"

[tool.setuptools]
py-modules = ["run"]
packages = ["app"]

[tool.setuptools.package-data]
app = [
    "templates/**",
    "static/**/*",
]
