[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gooey-theatergwd"
version = "1.2.15"
description = "TheaterGWD Control Center – web-based OSC device manager for theater sensor hardware"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
keywords = ["osc", "theater", "sensor", "control-center", "flask"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia",
    "Topic :: System :: Networking",
]
dependencies = [
    "flask>=3.0",
    "flask-socketio>=5.3",
    "python-osc>=1.8",
    "markdown>=3.7",
    "pyserial>=3.5",
    "qrcode>=7.0",
]

[project.urls]
Homepage = "https://github.com/halfsohappy/TheaterGWD"
Documentation = "https://github.com/halfsohappy/TheaterGWD/tree/main/gooey/docs"
Repository = "https://github.com/halfsohappy/TheaterGWD"
Issues = "https://github.com/halfsohappy/TheaterGWD/issues"

[project.scripts]
gooey = "run:main"

[tool.setuptools]
py-modules = ["run"]
packages = ["app"]

[tool.setuptools.package-data]
app = [
    "templates/**",
    "static/**/*",
]
